# backblaze-backups

./: .gitignore  README.md  config.json  pyproject.toml
backblaze_backups/: backblaze.py  config.py  io.py
tests/: conftest.py  test_config.json  test_config.py  test_io.py
utils/: sort.py
