[tool.poetry]
name = "backblaze-backups"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "backblaze_backups"}]

[tool.poetry.dependencies]
python = "^3.8"
b2sdk = "^1.18.0"
dataclasses-json = "^0.5.7"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
